--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@
 
     <div id="voice-assistant-container" class="hidden">
         <div id="voice-output"></div>
-        <button id="start-voice">Dixy - A Voice Assistant</button>
+        <button id="start-voice">Jigs - A Voice Assistant</button>
     </div>
 
     <div id="chatbot-container" class="hidden">
         <div id="chat-log">
-            <div class="chatbot-message">Hello! How can I help you? (Dixy - A Voice Assistant Cum Chat Bot)</div>
+            <div class="chatbot-message">(Jigs - A Voice Assistant cum Chat Bot by Jigyasu Vatsa)<br>Hello!<br>How can I help you?</div>
         </div>
         <div id="chat-input-area">
             <input type="text" id="chat-input" placeholder="Type your message...">
-            <button id="send-chat">Send (Dixy by Jigyasu Vatsa)</button>
+            <button id="send-chat">Send (Jigs)</button>
         </div>
     </div>
 
